<resources>
    <string name="app_name">TheCoffeeHouse FAKE</string>
    <string name="title_news">Tin tức</string>
    <string name="title_order">Đặt hàng</string>
    <string name="title_store">Cửa hàng</string>
    <string name="title_profile">Tài khoản</string>
    <string name="action_settings">Settings</string>
    <string name="GOOGLE_MAP_API_KEY">AIzaSyAksCftJZ_8_RV3O5gMqP43I4Yb-8ShkMs</string>
    <string name="label_login">Đăng nhập</string>
    <string name="fb_app_id">2082594551830252</string>
    <string name="account_kit_client_token">6e40bce01a734393dabbf1d7d7090fdb</string>
    <string name="ak_login_protocol_scheme">ak6e40bce01a734393dabbf1d7d7090fdb</string>
    <string name="action_open_news"></string>
    <string name="load_api_failed">Kết nối sever thất bại. Thử lại sau!</string>
    <string name="show_direction">Chỉ đường tới đây</string>
    <string name="detail">Chi tiết</string>
    <string name="access_time">Giờ mở cửa</string>
    <string name="contact">Liên hệ</string>
    <string name="radio_small">Nhỏ</string>
    <string name="radio_medium">Vừa</string>
    <string name="radio_large">Lớn</string>
    <string name="button_add_to_cart">Thêm vào giỏ</string>
    <string name="button_remove_from_cart">Bỏ chọn món</string>
    <string name="filter_cate_title">Danh mục món</string>
    <string name="where_do_u_want_to_go">Bạn muốn đến đâu?</string>
    <string name="gps_not_found_title">Thông báo</string>
    <string name="gps_not_found_message">Bạn nên bật Dịch vụ Định vị để TheCoffeeHouse FAKE có thể tìm kiếm các địa điểm gần bạn</string>
    <string name="gps_yes">Bật định vị</string>
    <string name="gps_no">Không</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
