<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpStoreImageSlider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewMini"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintDimensionRatio="H,3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vpStoreImageSlider"/>

        <TextView
            android:id="@+id/tvStoreFullAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_marker_map"
            android:drawablePadding="16dp"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="@id/mapViewMini"
            app:layout_constraintStart_toStartOf="@id/mapViewMini"
            app:layout_constraintTop_toBottomOf="@id/mapViewMini" />

        <View
            android:id="@+id/viewDevider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStoreFullAddress" />

        <TextView
            android:id="@+id/btnShowDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/text_login_background"
            android:padding="8dp"
            android:text="@string/show_direction"
            android:textColor="@color/colorOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDevider" />

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/bg_map_color"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnShowDirection" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemAccessTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetail">

            <ImageView
                android:id="@+id/iconAccessTime"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_access_time_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_access_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/access_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintStart_toEndOf="@id/iconAccessTime"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAccessTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="7:00 - 22:00"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toEndOf="@id/iconAccessTime"
                app:layout_constraintTop_toBottomOf="@id/tv_access_time" />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAccessTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemAccessTime">

            <ImageView
                android:id="@+id/iconContact"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_phone_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/contact"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintStart_toEndOf="@id/iconContact"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvContactPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="0285484864"
                android:autoLink="phone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toEndOf="@id/iconContact"
                app:layout_constraintTop_toBottomOf="@id/tv_contact"
                android:paddingBottom="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
