<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    tool:showIn=".DetailDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/img_btn_product"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_product"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@id/img_btn_close"
            app:layout_constraintStart_toEndOf="@+id/img_btn_product"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_btn_product"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_product" />

        <ImageView
            android:id="@+id/img_btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorBlack"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_see_more"></LinearLayout>

        <LinearLayout
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorBlack"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"></LinearLayout>

        <TextView
            android:id="@+id/textView9"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:text="Size"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <TextView
            android:id="@+id/textView11"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="8dp"
            android:text="Tạm tính"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_quatity"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_decrease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/img_btn_increase"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@drawable/btn_action_increase_background_selector"
            android:clickable="true"
            android:src="@drawable/ic_action_increase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/img_btn_decrease"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_action_decrease_background_selector"
            android:clickable="true"
            android:src="@drawable/ic_action_decrease"
            app:layout_constraintBottom_toBottomOf="@+id/img_btn_increase"
            app:layout_constraintEnd_toStartOf="@+id/tv_quatity"
            app:layout_constraintTop_toTopOf="@+id/img_btn_increase" />

        <TextView
            android:id="@+id/tv_quatity"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/img_btn_increase"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_increase"
            app:layout_constraintTop_toTopOf="@+id/img_btn_increase" />

        <Button
            android:id="@+id/btn_add_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@drawable/btn_action_background_selector"
            android:clickable="true"
            android:text="Thêm vào giỏ"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_like"
            app:layout_constraintTop_toBottomOf="@+id/img_btn_increase" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9">

            <RadioButton
                android:id="@+id/radio_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_radio_background_selector"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/radio_small"
                android:textColor="@drawable/btn_radio_background_selector" />

            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_radio_background_selector"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/radio_medium"
                android:textColor="@drawable/btn_radio_background_selector" />

            <RadioButton
                android:id="@+id/radio_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_radio_background_selector"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/radio_large"
                android:textColor="@drawable/btn_radio_background_selector" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_see_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="See more"
            android:textColor="@color/colorOrange"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <Button
            android:id="@+id/btn_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_like_style"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_favorite_border_black_24dp"
            android:drawableTint="@drawable/btn_like_style"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="Yêu thích"
            android:textColor="@drawable/btn_like_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_btn_increase" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>